# xtb-example

./: .clang-format  CMakeLists.txt  README.md  example.cc  example.out  xphos.cc
test-angstrom/: charges  energy  gradient  pcgrad  wbo  xtb.engrad  xtb.out  xtb.sh  xtb.xyz  xtbrestart  xtbtopo.mol
test-bohr/: charges  clean.sh  gradient  pcgrad  wbo  xtb.engrad  xtb.out  xtb.sh  xtbrestart  xtbtopo.mol
test-c-api-binary/: charges  clean.sh  energy  gradient  pcgrad  wbo  xtb.coord  xtb.engrad  xtb.out  xtb.pc  xtb.pcem  xtb.sh  xtbrestart  xtbtopo.mol
xtb-embedding/: benzene.pc
xtb-embedding/calc/: benzene.coord  benzene.out  benzene.pc  charges  pcem.input  pcgrad  wbo  xtbrestart  xtbtopo.mol
